--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-envlist = py26, py27, py30
+envlist = py26, py27, py32, py33, py34
 
 [testenv]
-deps = pytest
-commands = py.test
+commands = python setup.py test
