Add more test environments and also previous version of SQLAlchemy

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,11 @@
 [tox]
-envlist = py26, py27, py32, py33, py34
+envlist = py27, py27-sqla09, py34, py34-sqla09, py26, py32, py33, pypy
 
 [testenv]
 commands = python setup.py test
+
+[testenv:py27-sqla09]
+deps = SQLAlchemy>=0.9,<1.0a
+
+[testenv:py34-sqla09]
+deps = SQLAlchemy>=0.9,<1.0a
