--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,9 @@
 [aliases]
 test = pytest
+release = check -r register sdist bdist_wheel upload
 
+[metadata]
+license-file = LICENSE
+
+[bdist_wheel]
+universal = 1
