Introduce empty documentation

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py27-sqla09, py34, py34-sqla09, py26, py32, py33, pypy
+envlist = py27, py27-sqla09, py34, py34-sqla09, py26, py32, py33, pypy, docs
 
 [testenv]
 commands = python setup.py test
@@ -9,3 +9,9 @@ deps = SQLAlchemy>=0.9,<1.0a
 
 [testenv:py34-sqla09]
 deps = SQLAlchemy>=0.9,<1.0a
+
+[testenv:docs]
+basepython = python
+changedir = docs
+deps = sphinx
+commands = sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
