--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [aliases]
 test = pytest
-release = check -r register sdist bdist_wheel upload
+release = clean check -r register sdist bdist_wheel upload
 
 [metadata]
 license-file = LICENSE
